--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 include(CTest)
 enable_testing()
 
-add_executable(TinyRayTracer main.cpp geometry.h geometry.cpp image.h image.cpp renderer.h renderer.cpp global.h sphere.h sphere.cpp material.h material.cpp)
+add_executable(TinyRayTracer main.cpp geometry.h geometry.cpp image.h image.cpp renderer.h renderer.cpp global.h sphere.h sphere.cpp material.h material.cpp light.h light.cpp)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
